--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.helins</groupId>
   <artifactId>linux.i2c.bme280</artifactId>
-  <version>1.0.0-beta0</version>
+  <version>2.0.0-beta0</version>
   <name>Linux.I2C.BME280</name>
   <description>Talking to BME280 sensors via I2C from Clojure JVM</description>
   <url>https://github.com/helins/linux.i2c.bme280.clj</url>
@@ -27,7 +27,7 @@
     <tag>HEAD</tag>
   </scm>
   <build>
-    <sourceDirectory>src</sourceDirectory>
+    <sourceDirectory>src/main</sourceDirectory>
   </build>
   <repositories>
     <repository>
@@ -46,7 +46,12 @@
     <dependency>
       <groupId>org.clojure</groupId>
       <artifactId>clojure</artifactId>
-      <version>1.10.2</version>
+      <version>1.10.1</version>
+    </dependency>
+    <dependency>
+      <groupId>io.helins</groupId>
+      <artifactId>linux.i2c</artifactId>
+      <version>2.0.0</version>
     </dependency>
   </dependencies>
 </project>
